# TermUtils

./: .tm_properties  CMakeLists.txt  readme.md
include/term/: arg.h  colors.h  editor.h  hexes.h  line.h  printing.h  repl.h
src/: CMakeLists.txt  arg_parsing.c  arg_printing.c  arg_utils.c  colors.c  editor.c  editor.h  editor_keys.h  hexes.c  line.c  main.c  printing.c  repl.c  repl_private.c  repl_private.h  shims.h  string.c  string.h  string_buf.c  string_buf.h
src/term/: arg.h  colors.h  hexes.h  line.h  printing.h
